Added more unit tests.